Fixed ugly scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,3 +16,11 @@ body {
   font-family: var(--font-mont);
   font-weight: 500;
 }
+
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
